Pascal/test/cohadar/pascal/errors/undefined_function.pas
program test;

begin
	doSomething();
end.